tests/fixtures/invalid/round_none_float.py
# Cannot call round() with None, Float
x = round(None, 1.0)
